# rivals-mod-manager

./: .gitignore  README.md  package-lock.json  package.json  server.js
.cargo/: config.toml
public/: app.js  index.html  media-src.js  style.css
scripts/: tauri-build.ps1  tauri-dev.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
test/: mod-manager.test.js  tauri-integration.test.js
