[package]
name = "unreal-mod-manager"
version = "1.0.0"
description = "Local Unreal Engine mod pack manager"
authors = ["Codex"]
edition = "2021"

[lib]
name = "unreal_mod_manager_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
hex = "0.4"
rfd = "0.15"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
thiserror = "2"
time = "=0.3.36"
